packages/include-doc/tests/error/fn_body_in_dependencies.rs
use include_doc::function_body;

#[doc = function_body!("code.rs", function, [function])]
fn main() {}
